# turbo-vision-4-rust

./: .gitignore  API_CATALOG_INDEX.md  API_EXPLORATION_SUMMARY.txt  BUTTON_PALETTE_ANALYSIS.md  BUTTON_PALETTE_CODE_REFERENCE.md  BUTTON_PALETTE_INDEX.md  BUTTON_PALETTE_QUICK_REFERENCE.md  BUTTON_PALETTE_VISUAL_GUIDE.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_MANIFEST.txt  README.md  README_BUTTON_PALETTE_DOCS.md  SEARCH_RESULTS_SUMMARY.md  SSH_TUI_BRIDGE_PLAN.md  check_qcell  event_debug.txt  screen-dump.txt
.github/workflows/: publish.yml
.tokensave/: tokensave.db-shm
debug/: key_debug.rs
demo/: README.md  rust_editor.rs
docs/: BIORHYTHM-CALCULATOR-TUTORIAL.md  BIORHYTHM-TUTORIAL.md  BORLAND-PALETTE-CHART.md  DISCREPANCIES.md  DOCUMENTATION_INDEX.md  FINDINGS_SUMMARY.md  KEY_FILES_SUMMARY.txt  MISSING_FEATURES.md  PALETTE-SYSTEM-DESIGN.md  PALETTE_SYSTEM.md  QUICK_REFERENCE.txt  RUST-GUIDELINES-RECOMMENDATIONS.md  RUST_API_CATALOG.md  RUST_IMPLEMENTATION_REFERENCE.md  SERIALIZATION_QUICK_REFERENCE.md  TURBO-VISION-DESIGN.md  TURBOVISION-DESIGN.md  biorhythm_calculator_tutorial.md  borland_palette_chart.md  builder_pattern_doc.md  current_status_todo.md  custom_application_rust_example.md  custom_program_cpp_example.md  serialization_persistence.md  static_to_dependency_injection_analysis.md  turbo_vision_design.md
docs/user-guide/: Chapter-01-Stepping-into-Turbo-Vision.md  Chapter-02-Responding-to-Commands.md  Chapter-03-Adding-Windows.md  Chapter-04-Persistence-and-Configuration.md  Chapter-05-Creating-Data-Entry-Forms.md  Chapter-06-Managing-Data-Collections.md  Chapter-07-Architecture-Overview.md  Chapter-08-Views-and-Groups.md  Chapter-09-Event-Driven-Programming.md  Chapter-1-Stepping-into-Turbo-Vision.md  Chapter-10-Application-Objects.md  Chapter-11-Window-and-Dialog-Box-Objects.md  Chapter-11-Windows-and-Dialogs.md  Chapter-12-Control-Objects.md  Chapter-13-Data-Validation.md  Chapter-14-Palettes-and-Color-Selection.md  Chapter-15-Editor-and-Text-Views.md  Chapter-16-Collections-and-Streams.md  Chapter-17-Streams-and-Persistence.md  Chapter-18-Resources.md  Chapter-2-Responding-to-Commands.md  Chapter-3-Adding-Windows.md  Chapter-4-Persistence-and-Configuration.md  Chapter-5-Creating-Data-Entry-Forms.md  Chapter-5-Managing-Data-Collections.md  Chapter-6-Managing-Data-Collections.md  Chapter-7-Architecture-Overview.md  Chapter-8-Views-and-Groups.md  Chapter-9-Event-Driven-Programming.md
examples/: README.md  beep.rs  beep_demo.rs  biorhythm.rs  biorhythm_chrono.rs  broadcast.rs  broadcast_demo.rs  child_access.rs  command_set.rs  command_set_demo.rs  desklogo.rs  desktop_logo.rs  dialog_example.rs  dialogs.rs  dialogs_demo.rs  dynamic_title.rs  dynamic_title_demo.rs  editor.rs  editor_demo.rs  editor_test.rs  esc_feature.rs  event_debug.rs  file_browser.rs  file_dialog.rs  file_editor.rs  full-demo.rs  full_demo.rs  full_editor.rs  full_feature.rs  function_keys.rs  help.md  help_system.rs  history.rs  key_test.rs  kitty_background.rs  kitty_biorhythm.rs  kitty_image.rs  label_link.rs  label_link_demo.rs  list_components.rs  (+43 more)
src/: lib.rs  test_util.rs
src/app/: application.rs  mod.rs
src/core/: ansi.rs  ansi_dump.rs  clipboard.rs  command.rs  command_set.rs  draw.rs  error.rs  event.rs  geometry.rs  history.rs  menu_data.rs  mod.rs  palette.rs  palette_chain.rs  palette_regression_tests.rs  state.rs  status_data.rs
src/helpers/: mod.rs  msgbox.rs
src/ssh/: handler.rs  mod.rs  server.rs
src/terminal/: backend.rs  crossterm_backend.rs  input_parser.rs  mod.rs  ssh_backend.rs
src/views/: ansi_background.rs  background.rs  button.rs  chdir_dialog.rs  checkbox.rs  cluster.rs  color_dialog.rs  color_selector.rs  desktop.rs  dialog.rs  dir_listbox.rs  edit_window.rs  editor.rs  editor_traits.rs  file_dialog.rs  file_editor.rs  file_list.rs  frame.rs  group.rs  help_context.rs  help_file.rs  (+36 more)
tests/: menu_status_data.rs  msgbox_test.rs  palette_regression_tests.rs  test_clipping.rs  test_file_filter.rs
to-do/: BORLAND-PALETTE-COMPARISON.md  BUGS.md  CANDIDATE-BUILDER.md  HARDCODED-COLORS.md  MISSING-OWNER-TYPE.md  PALETTE-ARCHITECTURE.md  README.md
(+1 files in other folders)
