[package]
name = "turbo-vision"
version = "0.2.1"
edition = "2021"
authors = ["enzinol@gmail.com"]
license = "MIT"
repository = "https://github.com/aovestdipaperino/turbo-vision-4-rust"
homepage = "https://github.com/aovestdipaperino/turbo-vision-4-rust"
description = "A Rust implementation of the classic Borland Turbo Vision text-mode UI framework"
keywords = ["tui", "terminal", "ui", "turbo-vision", "text-mode"]
categories = ["command-line-interface", "gui"]
readme = "README.md"
exclude = [
    "local-only/*",
    "docs/*",
    "debug/*",
    ".claude/*",
    "*.png",
    "*.jpg",
    "*.jpeg",
    "*.gif",
    ".DS_Store",
]

[lib]
name = "turbo_vision"
path = "src/lib.rs"

[[bin]]
name = "key_debug"
path = "debug/key_debug.rs"

[dependencies]
crossterm = "0.27"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.8"
